--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="./src/assets/images/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+		<link rel="preload" as="image" href="/src/assets/images/img_ad1.webp" type="image/webp" fetchpriority="high" />
+
 		<title>에브리타임</title>
 	</head>
 	<body>
