perf: 폰트 최적화

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<link rel="preload" as="image" href="/src/assets/images/img_ad1.webp" type="image/webp" fetchpriority="high" />
+		<link rel="preload" as="font" type="font/woff2" href="/fonts/Pretendard-Regular.subset.woff2" />
+		<link rel="preload" as="font" type="font/woff2" href="/fonts/Pretendard-Medium.subset.woff2" />
+		<link rel="preload" as="font" type="font/woff2" href="/fonts/Pretendard-SemiBold.subset.woff2" />
+		<link rel="preload" as="font" type="font/woff2" href="/fonts/Pretendard-Bold.subset.woff2" />
+		<link rel="prefetch" as="font" type="font/woff2" href="/fonts/Pretendard-ExtraBold.subset.woff2" />
 
 		<title>에브리타임</title>
 	</head>
